// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Polygon should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-polygon"
    >
      <polygon
        class="polygon"
        points="0,100 50,25 50,75 100,0"
        style="opacity: 0.05; fill: red; pointer-events: none;"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Polygon should render nothing if given no points 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-polygon"
    />
  </svg>
</DocumentFragment>
`;
